--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>trhg - Omelette Recipe Page | Frontend Mentor Challenge</title>
+        <title>trhg - TheRedHoodGuy Socials | Frontend Mentor Challenge</title>
         <link rel="icon" href="assets/images/favicon-32x32.png">
 
         <!--Meta's-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="TheRedHoodGuy | Okpalannajiaku Xavier">
-        <meta name="description" content="Frontend Mentor Challenge Attempt - One">
+        <meta name="description" content="Frontend Mentor Challenge Attempt - Two">
         <!--Metas's-->
 
         <!--Google Fonts and styles-->
