WhatsApp Api Link

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <a href="https://www.instagram.com/xavier.draws.stuff/" target="_blank" class="w-full p-3 rounded-md bg-grey text-center font-semibold hover:bg-green hover:text-dark_grey duration-200">Instagram</a>
                     <a href="https://www.youtube.com/@LexyXavi" target="_blank" class="w-full p-3 rounded-md bg-grey text-center font-semibold hover:bg-green hover:text-dark_grey duration-200">Youtube</a>
                     <a href="https://www.tiktok.com/@xavier.draws.stuff" target="_blank" class="w-full p-3 rounded-md bg-grey text-center font-semibold hover:bg-green hover:text-dark_grey duration-200">TikTok</a>
+                    <!--Too Long!!-->
                     <div class="w-full relative flex justify-center items-center">
                         <a href="https://twitter.com/404" target="_blank" class="w-full p-3 rounded-md bg-grey text-center font-semibold peer opacity-50">Twitter</a>
                     </div>
